kubernetes/full-stack/director/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: director
  labels:
    app: director
spec:
  selector:
    app: director
  ports:
    - protocol: TCP
      port: 1234
      targetPort: 1234
