kubernetes/full-stack/director/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: director
spec:
  rules:
  - host: sc-director.byo.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: director
            port:
              number: 1234
